# fjx-utils

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: unit-test.yml
include/: CMakeLists.txt
include/fjx-utils/: avl_tree.h  bstree.h  list.h  splay_tree.h  utils.h
src/: CMakeLists.txt  avl_tree.c  bstree.c  splay_tree.c
tests/: CMakeLists.txt  avl_test.c  list_test.c  main_suite.c  splay_test.c
